--- a/.github/workflows/ci-scripts-build.yml
+++ b/.github/workflows/ci-scripts-build.yml
@@ -54,131 +54,143 @@ jobs:
       matrix:
         # Job names also name artifacts, character limitations apply
         include:
-          - os: ubuntu-20.04
-            cmp: gcc
+          - os: ubuntu-22.04
+            cmp: gcc-12
             configuration: default
-            wine: "64"
-            name: "Ub-20 gcc-9 + MinGW"
+            name: "Ub-22 gcc-12, c++20"
+            extra: "CMD_CXXFLAGS=-std=c++20"
+            extra1: "CMD_CPPFLAGS=-fdiagnostics-color"
+            extra2: "GCC_COLORS=error=1;31;7:warning=1;31:note=01;36:range1=32:range2=34:locus=01:\
+                   quote=01:fixit-insert=32:fixit-delete=31:\
+                   diff-filename=01:diff-hunk=32:diff-delete=31:diff-insert=32:\
+                   type-diff=01;32"
 
-          - os: ubuntu-20.04
-            cmp: gcc
-            configuration: static
-            wine: "64"
-            name: "Ub-20 gcc-9 + MinGW, static"
-
-          - os: ubuntu-20.04
-            cmp: gcc
-            configuration: static
-            extra: "CMD_CXXFLAGS=-std=c++11"
-            name: "Ub-20 gcc-9 C++11, static"
-
-          - os: ubuntu-20.04
-            cmp: gcc
-            configuration: static
-            extra: "CMD_CFLAGS=-funsigned-char"
-            extra1: "CMD_CXXFLAGS=-funsigned-char"
-            name: "Ub-20 gcc-9 unsigned char"
-
-          - os: ubuntu-20.04
-            cmp: clang
-            configuration: default
-            name: "Ub-20 clang-10"
-
-          - os: ubuntu-20.04
-            cmp: clang
-            configuration: default
-            extra: "CMD_CXXFLAGS=-std=c++11"
-            name: "Ub-20 clang-10 C++11"
-
-          - os: ubuntu-20.04
-            cmp: gcc
-            configuration: default
-            rtems: "5"
-            rtems_target: RTEMS-pc686-qemu
-            name: "Ub-20 gcc-9 + RT-5.1 pc686"
-
-          - os: ubuntu-20.04
-            cmp: gcc
-            configuration: default
-            rtems: "5"
-            rtems_target: RTEMS-beatnik
-            test: NO
-            name: "Ub-20 gcc-9 + RT-5.1 beatnik"
-
-          # Only build one RTEMS target per CPU family
-          # unless it's running the tests
-          #
-          # - os: ubuntu-20.04
-          #   cmp: gcc
-          #   configuration: default
-          #   rtems: "5"
-          #   rtems_target: RTEMS-mvme3100
-          #   test: NO
-          #   name: "Ub-20 gcc-9 + RT-5.1 mvme3100"
-          #
-          # - os: ubuntu-20.04
-          #   cmp: gcc
-          #   configuration: default
-          #   rtems: "5"
-          #   rtems_target: RTEMS-qoriq_e500
-          #   test: NO
-          #   name: "Ub-20 gcc-9 + RT-5.1 qoriq_e500"
-
-          - os: ubuntu-20.04
-            cmp: gcc
-            configuration: default
-            rtems: "5"
-            rtems_target: RTEMS-xilinx_zynq_a9_qemu
-            test: NO
-            name: "Ub-20 gcc-9 + RT-5.1 xilinx_zynq_a9_qemu"
-
-          - os: ubuntu-20.04
-            cmp: gcc
-            configuration: default
-            rtems: "5"
-            rtems_target: RTEMS-uC5282
-            test: NO
-            name: "Ub-20 gcc-9 + RT-5.1 uC5282"
-
-          - os: ubuntu-20.04
-            cmp: gcc
-            configuration: default
-            rtems: "4.10"
-            name: "Ub-20 gcc-9 + RT-4.10"
-            rtems_target: RTEMS-pc386-qemu
-            test: NO
-
-          - os: ubuntu-20.04
-            cmp: gcc
-            configuration: default
-            rtems: "4.9"
-            name: "Ub-20 gcc-9 + RT-4.9"
-            rtems_target: RTEMS-pc386-qemu
-
-          - os: macos-latest
-            cmp: clang
-            configuration: default
-            name: "MacOS clang-12"
-
-          - os: windows-2019
-            cmp: vs2019
-            configuration: default
-            name: "Win2019 MSC-19"
-
-          - os: windows-2019
-            cmp: vs2019
-            configuration: static
-            name: "Win2019 MSC-19, static"
-
-          - os: windows-2019
-            cmp: vs2019
-            configuration: debug
-            name: "Win2019 MSC-19, debug"
-
-          - os: windows-2019
-            cmp: gcc
-            configuration: default
-            name: "Win2019 mingw"
+            
+#          - os: ubuntu-20.04
+#            cmp: gcc
+#            configuration: default
+#            wine: "64"
+#            name: "Ub-20 gcc-9 + MinGW"
+#
+#          - os: ubuntu-20.04
+#            cmp: gcc
+#            configuration: static
+#            wine: "64"
+#            name: "Ub-20 gcc-9 + MinGW, static"
+#
+#          - os: ubuntu-20.04
+#            cmp: gcc
+#            configuration: static
+#            extra: "CMD_CXXFLAGS=-std=c++11"
+#            name: "Ub-20 gcc-9 C++11, static"
+#
+#          - os: ubuntu-20.04
+#            cmp: gcc
+#            configuration: static
+#            extra: "CMD_CFLAGS=-funsigned-char"
+#            extra1: "CMD_CXXFLAGS=-funsigned-char"
+#            name: "Ub-20 gcc-9 unsigned char"
+#
+#          - os: ubuntu-20.04
+#            cmp: clang
+#            configuration: default
+#            name: "Ub-20 clang-10"
+#
+#          - os: ubuntu-20.04
+#            cmp: clang
+#            configuration: default
+#            extra: "CMD_CXXFLAGS=-std=c++11"
+#            name: "Ub-20 clang-10 C++11"
+#
+#          - os: ubuntu-20.04
+#            cmp: gcc
+#            configuration: default
+#            rtems: "5"
+#            rtems_target: RTEMS-pc686-qemu
+#            name: "Ub-20 gcc-9 + RT-5.1 pc686"
+#
+#          - os: ubuntu-20.04
+#            cmp: gcc
+#            configuration: default
+#            rtems: "5"
+#            rtems_target: RTEMS-beatnik
+#            test: NO
+#            name: "Ub-20 gcc-9 + RT-5.1 beatnik"
+#
+#          # Only build one RTEMS target per CPU family
+#          # unless it's running the tests
+#          #
+#          # - os: ubuntu-20.04
+#          #   cmp: gcc
+#          #   configuration: default
+#          #   rtems: "5"
+#          #   rtems_target: RTEMS-mvme3100
+#          #   test: NO
+#          #   name: "Ub-20 gcc-9 + RT-5.1 mvme3100"
+#          #
+#          # - os: ubuntu-20.04
+#          #   cmp: gcc
+#          #   configuration: default
+#          #   rtems: "5"
+#          #   rtems_target: RTEMS-qoriq_e500
+#          #   test: NO
+#          #   name: "Ub-20 gcc-9 + RT-5.1 qoriq_e500"
+#
+#          - os: ubuntu-20.04
+#            cmp: gcc
+#            configuration: default
+#            rtems: "5"
+#            rtems_target: RTEMS-xilinx_zynq_a9_qemu
+#            test: NO
+#            name: "Ub-20 gcc-9 + RT-5.1 xilinx_zynq_a9_qemu"
+#
+#          - os: ubuntu-20.04
+#            cmp: gcc
+#            configuration: default
+#            rtems: "5"
+#            rtems_target: RTEMS-uC5282
+#            test: NO
+#            name: "Ub-20 gcc-9 + RT-5.1 uC5282"
+#
+#          - os: ubuntu-20.04
+#            cmp: gcc
+#            configuration: default
+#            rtems: "4.10"
+#            name: "Ub-20 gcc-9 + RT-4.10"
+#            rtems_target: RTEMS-pc386-qemu
+#            test: NO
+#
+#          - os: ubuntu-20.04
+#            cmp: gcc
+#            configuration: default
+#            rtems: "4.9"
+#            name: "Ub-20 gcc-9 + RT-4.9"
+#            rtems_target: RTEMS-pc386-qemu
+#
+#          - os: macos-latest
+#            cmp: clang
+#            configuration: default
+#            name: "MacOS clang-12"
+#
+#          - os: windows-2019
+#            cmp: vs2019
+#            configuration: default
+#            name: "Win2019 MSC-19"
+#
+#          - os: windows-2019
+#            cmp: vs2019
+#            configuration: static
+#            name: "Win2019 MSC-19, static"
+#
+#          - os: windows-2019
+#            cmp: vs2019
+#            configuration: debug
+#            name: "Win2019 MSC-19, debug"
+#
+#          - os: windows-2019
+#            cmp: gcc
+#            configuration: default
+#            name: "Win2019 mingw"
 
     steps:
     - uses: actions/checkout@v3
@@ -208,82 +220,82 @@ jobs:
       if: ${{ always() }}
       run: python .ci/cue.py -T 5M test-results
 
-  docker:
-    name: ${{ matrix.name }}
-    runs-on: ubuntu-latest
-    container:
-      image: ${{ matrix.image }}
-    # Set environment variables from matrix parameters
-    env:
-      CMP: ${{ matrix.cmp }}
-      BCFG: ${{ matrix.configuration }}
-      EXTRA: ${{ matrix.extra }}
-      TEST: ${{ matrix.test }}
-    strategy:
-      fail-fast: false
-      matrix:
-        # Job names also name artifacts, character limitations apply
-        include:
-          - name: "CentOS-7"
-            image: centos:7
-            cmp: gcc
-            configuration: default
-
-          - name: "Fedora-33"
-            image: fedora:33
-            cmp: gcc
-            configuration: default
-
-          - name: "Fedora-latest"
-            image: fedora:latest
-            cmp: gcc
-            configuration: default
-
-    steps:
-    - name: "Build newer Git"
-      # actions/checkout@v2 wants git >=2.18
-      # centos:7 has 1.8
-      if: matrix.image=='centos:7'
-      run: |
-        yum -y install curl make gcc curl-devel expat-devel gettext-devel openssl-devel zlib-devel perl-ExtUtils-MakeMaker
-        curl https://mirrors.edge.kernel.org/pub/software/scm/git/git-2.29.0.tar.gz | tar -xz
-        cd git-*
-        make -j2 prefix=/usr/local all
-        make prefix=/usr/local install
-        cd ..
-        rm -rf git-*
-        type -a git
-        git --version
-    - name: "Redhat setup"
-      run: |
-        dnfyum() {
-            dnf -y "$@" || yum -y "$@"
-            return $?
-        }
-        dnfyum install python3 gdb make perl gcc-c++ glibc-devel readline-devel ncurses-devel perl-devel perl-Test-Simple
-        git --version || dnfyum install git
-        # rather than just bite the bullet and link python3 -> python,
-        # people would rather just break all existing scripts...
-        [ -e /usr/bin/python ] || ln -sf python3 /usr/bin/python
-        python --version
-    - uses: actions/checkout@v3
-      with:
-        submodules: true
-    - name: Automatic core dumper analysis
-      uses: mdavidsaver/ci-core-dumper@master
-    - name: Prepare and compile dependencies
-      run: python .ci/cue.py prepare
-    - name: Build main module
-      run: python .ci/cue.py build
-    - name: Run main module tests
-      run: python .ci/cue.py -T 20M test
-    - name: Upload tapfiles Artifact
-      if: ${{ always() }}
-      uses: actions/upload-artifact@v3
-      with:
-        name: tapfiles ${{ matrix.name }}
-        path: '**/O.*/*.tap'
-        if-no-files-found: ignore
-    - name: Collect and show test results
-      if: ${{ always() }}
-      run: python .ci/cue.py -T 5M test-results
+#  docker:
+#    name: ${{ matrix.name }}
+#    runs-on: ubuntu-latest
+#    container:
+#      image: ${{ matrix.image }}
+#    # Set environment variables from matrix parameters
+#    env:
+#      CMP: ${{ matrix.cmp }}
+#      BCFG: ${{ matrix.configuration }}
+#      EXTRA: ${{ matrix.extra }}
+#      TEST: ${{ matrix.test }}
+#    strategy:
+#      fail-fast: false
+#      matrix:
+#        # Job names also name artifacts, character limitations apply
+#        include:
+#          - name: "CentOS-7"
+#            image: centos:7
+#            cmp: gcc
+#            configuration: default
+#
+#          - name: "Fedora-33"
+#            image: fedora:33
+#            cmp: gcc
+#            configuration: default
+#
+#          - name: "Fedora-latest"
+#            image: fedora:latest
+#            cmp: gcc
+#            configuration: default
+#
+#    steps:
+#    - name: "Build newer Git"
+#      # actions/checkout@v2 wants git >=2.18
+#      # centos:7 has 1.8
+#      if: matrix.image=='centos:7'
+#      run: |
+#        yum -y install curl make gcc curl-devel expat-devel gettext-devel openssl-devel zlib-devel perl-ExtUtils-MakeMaker
+#        curl https://mirrors.edge.kernel.org/pub/software/scm/git/git-2.29.0.tar.gz | tar -xz
+#        cd git-*
+#        make -j2 prefix=/usr/local all
+#        make prefix=/usr/local install
+#        cd ..
+#        rm -rf git-*
+#        type -a git
+#        git --version
+#    - name: "Redhat setup"
+#      run: |
+#        dnfyum() {
+#            dnf -y "$@" || yum -y "$@"
+#            return $?
+#        }
+#        dnfyum install python3 gdb make perl gcc-c++ glibc-devel readline-devel ncurses-devel perl-devel perl-Test-Simple
+#        git --version || dnfyum install git
+#        # rather than just bite the bullet and link python3 -> python,
+#        # people would rather just break all existing scripts...
+#        [ -e /usr/bin/python ] || ln -sf python3 /usr/bin/python
+#        python --version
+#    - uses: actions/checkout@v3
+#      with:
+#        submodules: true
+#    - name: Automatic core dumper analysis
+#      uses: mdavidsaver/ci-core-dumper@master
+#    - name: Prepare and compile dependencies
+#      run: python .ci/cue.py prepare
+#    - name: Build main module
+#      run: python .ci/cue.py build
+#    - name: Run main module tests
+#      run: python .ci/cue.py -T 20M test
+#    - name: Upload tapfiles Artifact
+#      if: ${{ always() }}
+#      uses: actions/upload-artifact@v3
+#      with:
+#        name: tapfiles ${{ matrix.name }}
+#        path: '**/O.*/*.tap'
+#        if-no-files-found: ignore
+#    - name: Collect and show test results
+#      if: ${{ always() }}
+#      run: python .ci/cue.py -T 5M test-results
